--- a/app/assets/stylesheets/userprofile/user_profile_modals.scss
+++ b/app/assets/stylesheets/userprofile/user_profile_modals.scss
@@ -39,4 +39,5 @@
   width: 110px !important;
   height: 110px !important;
   margin: 0px;
+  padding: 4px;
 }
